fixed mobile section overflow

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -14,6 +14,10 @@ html {
 
       overflow-y: scroll;
       height: calc(100vh - 50px);
+
+      img {
+        max-width: 100%;
+      }
     }
   }
 
